--- a/manage-institutes.html
+++ b/manage-institutes.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>إدارة المعهد - نظام OMA</title>
+<title>إدارة المعاهد - نظام OMA</title>
 <style>
 :root {
   --primary:#004aad;
@@ -11,69 +11,134 @@
   --card:#fff;
   --accent:#ffcc33;
 }
+
 body {
-  font-family: 'Cairo', sans-serif;
+  font-family:'Cairo',sans-serif;
   background: var(--bg);
   margin:0;
   padding:20px;
 }
-h2 { text-align:center; color:var(--primary); margin-bottom:20px; }
-.institute-card {
+
+header {
+  text-align:center;
+  background: var(--primary);
+  color:white;
+  padding:15px 0;
+  font-size:20px;
+  font-weight:bold;
+  border-radius:8px;
+}
+
+.form-container {
   background: var(--card);
+  padding:30px;
+  max-width:600px;
+  margin:20px auto;
+  border-radius:12px;
+  box-shadow:0 4px 15px rgba(0,0,0,0.1);
+}
+
+input, select, button {
+  width:100%;
+  padding:12px;
+  margin-bottom:15px;
+  border-radius:8px;
+  border:1px solid #ccc;
+  font-size:15px;
+}
+
+button {
+  background: var(--primary);
+  color:white;
+  border:none;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+button:hover { background:#003a8c; }
+
+.label { font-weight:bold; margin-bottom:5px; display:block; }
+
+.institutes-list {
+  margin-top:30px;
+  background:#eef4ff;
   padding:20px;
   border-radius:10px;
-  box-shadow:0 4px 10px rgba(0,0,0,0.1);
-  margin-bottom:20px;
 }
-.institute-header {
+
+.institutes-list h3 { margin-top:0; color:var(--primary); }
+
+.institute-item {
+  padding:10px;
+  border-bottom:1px solid #ccc;
   display:flex;
   justify-content: space-between;
   align-items:center;
-  flex-wrap: wrap;
 }
-.institute-header h3 { margin:0; color:var(--primary); }
-.institute-actions button {
+
+.institute-item:last-child { border-bottom:none; }
+
+.institute-item button {
+  width:auto;
   margin-left:5px;
-  padding:6px 12px;
-  border:none;
-  border-radius:6px;
-  cursor:pointer;
-  color:white;
-  font-weight:bold;
-  transition:0.3s;
+  padding:5px 10px;
+  font-size:14px;
 }
-.editBtn { background:#004aad; }
-.editBtn:hover { background:#003a8c; }
-.deleteBtn { background:#d32f2f; }
-.deleteBtn:hover { background:#b71c1c; }
-.institute-colors { margin-top:10px; display:flex; gap:10px; flex-wrap: wrap; }
-.color-box { width:40px; height:40px; border-radius:5px; border:1px solid #ccc; }
-#logoutBtn {
-  background-color: #d32f2f;
-  color:white;
-  border:none;
-  padding:12px 20px;
-  border-radius:8px;
-  cursor:pointer;
-  font-size:16px;
-  margin:20px auto 0;
-  display:block;
-  transition:0.3s;
-}
-#logoutBtn:hover { background-color:#b71c1c; }
 </style>
 </head>
 <body>
 
-<h2>إدارة المعهد - نظام OMA</h2>
-<div id="institutesContainer"></div>
-<button id="logoutBtn">🔓 تسجيل الخروج</button>
+<header>👨‍💼 إدارة المعاهد - نظام OMA</header>
+
+<div class="form-container">
+  <label class="label">اسم المعهد</label>
+  <input type="text" id="instituteName" placeholder="أدخل اسم المعهد">
+
+  <label class="label">شعار المعهد</label>
+  <input type="file" id="instituteLogo" accept="image/*">
+
+  <label class="label">البريد الإلكتروني لمدير المعهد</label>
+  <input type="email" id="adminEmail" placeholder="example@mail.com">
+
+  <label class="label">كلمة المرور لمدير المعهد</label>
+  <input type="password" id="adminPassword" placeholder="********">
+
+  <label class="label">لون رئيسي</label>
+  <input type="color" id="colorPrimary" value="#004aad">
+
+  <label class="label">لون خلفية</label>
+  <input type="color" id="colorBg" value="#f5f9ff">
+
+  <label class="label">لون البطاقات</label>
+  <input type="color" id="colorCard" value="#ffffff">
+
+  <label class="label">لون عناصر التمييز</label>
+  <input type="color" id="colorAccent" value="#ffcc33">
+
+  <label class="label">مدة الاشتراك</label>
+  <select id="subscriptionType">
+    <option value="lifetime">مدى الحياة</option>
+    <option value="trial">تجريبي</option>
+  </select>
+
+  <button id="createBtn">إنشاء المعهد</button>
+  <p id="statusMsg" style="color:red;"></p>
+</div>
+
+<div class="institutes-list" id="institutesList">
+  <h3>المعاهد الموجودة</h3>
+  <div id="listContainer"></div>
+</div>
+
+<button id="logoutBtn" style="margin:30px auto; display:block;">🔓 تسجيل الخروج</button>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-storage.js";
 
+// 🔹 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -87,88 +152,129 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 const auth = getAuth(app);
-const institutesContainer = document.getElementById("institutesContainer");
+const storage = getStorage(app);
 
-let currentUser = null;
+const instituteName = document.getElementById("instituteName");
+const instituteLogo = document.getElementById("instituteLogo");
+const adminEmail = document.getElementById("adminEmail");
+const adminPassword = document.getElementById("adminPassword");
+const colorPrimary = document.getElementById("colorPrimary");
+const colorBg = document.getElementById("colorBg");
+const colorCard = document.getElementById("colorCard");
+const colorAccent = document.getElementById("colorAccent");
+const subscriptionType = document.getElementById("subscriptionType");
+const createBtn = document.getElementById("createBtn");
+const statusMsg = document.getElementById("statusMsg");
+const listContainer = document.getElementById("listContainer");
+const logoutBtn = document.getElementById("logoutBtn");
 
-// منع الدخول إلا بعد تسجيل الدخول
-onAuthStateChanged(auth, async (user)=>{
-  if(!user) window.location.href="institute-login.html";
-  else {
-    currentUser = user;
-    loadInstitutesForUser();
-  }
+// 🔹 التأكد من تسجيل الدخول
+auth.onAuthStateChanged(user=>{
+  if(!user) window.location.href="login.html";
 });
 
-// تحميل المعهد الخاص بالمستخدم
-async function loadInstitutesForUser(){
-  institutesContainer.innerHTML = "";
-  const userDoc = await doc(db,"users",currentUser.uid).get();
-  const userSnap = await getDocs(collection(db,"users"));
-  const userRef = doc(db,"users",currentUser.uid);
-  const userDataSnap = await getDocs(collection(db,"users"));
-  const usersCollection = collection(db,"users");
-
-  const userDocSnap = await doc(db,"users",currentUser.uid);
-  const userData = (await userDocSnap.get()).data();
-
-  // superAdmin يرى كل المعاهد
-  let querySnapshot;
-  if(userData.type==="superAdmin"){
-    querySnapshot = await getDocs(collection(db,"institutes"));
-  } else if(userData.type==="instituteAdmin"){
-    querySnapshot = await getDocs(collection(db,"institutes"));
-    querySnapshot = querySnapshot.docs.filter(d=>d.id===userData.instituteId).map(d=>({id:d.id,data:d.data()}));
-  } else return;
-
-  for(const docSnap of querySnapshot){
-    const data = docSnap.data? docSnap.data : docSnap.data();
-    const instituteId = docSnap.id ? docSnap.id : docSnap.id;
-    const card = document.createElement("div");
-    card.classList.add("institute-card");
-    card.innerHTML = `
-      <div class="institute-header">
-        <h3>${data.name}</h3>
-        <div class="institute-actions">
-          ${userData.type==="superAdmin"?'<button class="editBtn">تعديل</button>':'<button class="editBtn">تعديل</button>'}
-        </div>
-      </div>
-      <p>البريد: ${data.email || "غير محدد"}</p>
-      <p>نوع الاشتراك: ${data.subscriptionType || "غير محدد"}</p>
-      <div class="institute-colors">
-        <div class="color-box" style="background:${data.colors?.primary || "#004aad"}" title="Primary"></div>
-        <div class="color-box" style="background:${data.colors?.bg || "#f5f9ff"}" title="Background"></div>
-        <div class="color-box" style="background:${data.colors?.card || "#fff"}" title="Card"></div>
-        <div class="color-box" style="background:${data.colors?.accent || "#ffcc33"}" title="Accent"></div>
-      </div>
-    `;
-
-    // تعديل المعهد
-    card.querySelector(".editBtn").addEventListener("click", async()=>{
-      const newName = prompt("أدخل اسم المعهد الجديد:", data.name);
-      if(!newName) return;
-      const newPrimary = prompt("أدخل اللون الرئيسي:", data.colors?.primary || "#004aad");
-      const newBg = prompt("أدخل لون الخلفية:", data.colors?.bg || "#f5f9ff");
-      const newCard = prompt("أدخل لون البطاقات:", data.colors?.card || "#fff");
-      const newAccent = prompt("أدخل لون التمييز:", data.colors?.accent || "#ffcc33");
-
-      await updateDoc(doc(db,"institutes",instituteId),{
-        name:newName,
-        colors:{primary:newPrimary,bg:newBg,card:newCard,accent:newAccent}
-      });
-      loadInstitutesForUser();
-    });
-
-    institutesContainer.appendChild(card);
-  }
+// تحميل قائمة المعاهد
+async function loadInstitutes() {
+  listContainer.innerHTML = "";
+  const querySnapshot = await getDocs(collection(db,"institutes"));
+  querySnapshot.forEach(docSnap=>{
+    const data = docSnap.data();
+    const div = document.createElement("div");
+    div.classList.add("institute-item");
+    div.innerHTML = `<span>${data.name} - ${data.adminEmail} - ${data.createdAt?.toDate?.().toLocaleDateString() || "غير محدد"}</span>
+                     <span>
+                       <button onclick="editInstitute('${docSnap.id}')">✏️ تعديل</button>
+                       <button onclick="deleteInstitute('${docSnap.id}')">🗑 حذف</button>
+                     </span>`;
+    listContainer.appendChild(div);
+  });
 }
 
-// زر تسجيل الخروج
-document.getElementById("logoutBtn").addEventListener("click", async()=>{
-  await signOut(auth);
-  alert("تم تسجيل الخروج بنجاح");
-  window.location.href="institute-login.html";
+// إنشاء معهد جديد
+createBtn.addEventListener("click", async()=>{
+  const name = instituteName.value.trim();
+  const email = adminEmail.value.trim();
+  const password = adminPassword.value.trim();
+  if(!name || !email || !password){
+    statusMsg.textContent="الرجاء تعبئة جميع الحقول.";
+    return;
+  }
+  statusMsg.textContent="جاري إنشاء المعهد...";
+
+  try{
+    let logoUrl="";
+    if(instituteLogo.files.length>0){
+      const file = instituteLogo.files[0];
+      const logoRef = ref(storage, `instituteLogos/${Date.now()}_${file.name}`);
+      await uploadBytes(logoRef, file);
+      logoUrl = await getDownloadURL(logoRef);
+    }
+
+    // إنشاء مدير المعهد
+    const userCred = await createUserWithEmailAndPassword(auth,email,password);
+    const adminId = userCred.user.uid;
+
+    // إضافة المعهد
+    const docRef = await addDoc(collection(db,"institutes"),{
+      name,
+      adminId,
+      adminEmail: email,
+      logoUrl,
+      colors:{
+        primary: colorPrimary.value,
+        bg: colorBg.value,
+        card: colorCard.value,
+        accent: colorAccent.value
+      },
+      subscriptionType: subscriptionType.value,
+      createdAt: serverTimestamp()
+    });
+
+    // ربط المستخدم بالمعهد
+    await addDoc(collection(db,"users"),{
+      uid: adminId,
+      type:"instituteAdmin",
+      instituteId: docRef.id,
+      email:email,
+      createdAt:serverTimestamp()
+    });
+
+    statusMsg.style.color="green";
+    statusMsg.textContent="تم إنشاء المعهد بنجاح!";
+    instituteName.value="";
+    adminEmail.value="";
+    adminPassword.value="";
+    instituteLogo.value="";
+    loadInstitutes();
+  }catch(err){
+    console.error(err);
+    statusMsg.style.color="red";
+    statusMsg.textContent="حدث خطأ أثناء إنشاء المعهد.";
+  }
 });
+
+// حذف معهد
+window.deleteInstitute = async (id)=>{
+  if(!confirm("هل تريد حقاً حذف هذا المعهد؟")) return;
+  await deleteDoc(doc(db,"institutes",id));
+  loadInstitutes();
+};
+
+// تعديل معهد (سريع، يمكن تطويره لاحقاً)
+window.editInstitute = async (id)=>{
+  const docRef = doc(db,"institutes",id);
+  const docSnap = await getDocs(collection(db,"institutes"));
+  alert("ميزة التعديل متاحة لاحقاً");
+};
+
+// تسجيل الخروج
+logoutBtn.addEventListener("click", async()=>{
+  await signOut(auth);
+  window.location.href="login.html";
+});
+
+// تحميل القائمة عند فتح الصفحة
+loadInstitutes();
 </script>
 </body>
 </html>
