--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>تسجيل الدخول - نظام OMA</title>
 <style>
 :root { --primary:#004aad; --bg:#f5f9ff; --card:#fff; }
@@ -17,12 +17,11 @@ footer { position:fixed; bottom:10px; width:100%; text-align:center; color:#888;
 </style>
 </head>
 <body>
-
 <div class="login-box">
   <h2>تسجيل الدخول 🔐</h2>
   <p class="error" id="errorMsg"></p>
-  <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-  <input type="password" id="password" placeholder="كلمة المرور" required>
+  <input type="email" id="email" placeholder="البريد الإلكتروني" required />
+  <input type="password" id="password" placeholder="كلمة المرور" required />
   <button id="loginBtn">دخول</button>
 </div>
 
@@ -53,26 +52,19 @@ const passwordInput = document.getElementById("password");
 const loginBtn = document.getElementById("loginBtn");
 const errorMsg = document.getElementById("errorMsg");
 
-// ✅ تحقق تسجيل دخول مسبق
+// تحقق تسجيل دخول مسبق
 onAuthStateChanged(auth, async (user) => {
   if (user) {
-    try {
-      const userDoc = await getDoc(doc(db,"users",user.uid));
-      if(userDoc.exists()) redirectUser(userDoc.data());
-    } catch(err){
-      console.error(err);
-    }
+    const userDoc = await getDoc(doc(db,"users",user.uid));
+    if(userDoc.exists()) redirectUser(userDoc.data());
   }
 });
 
-// 🎯 تسجيل الدخول
+// تسجيل الدخول
 loginBtn.addEventListener("click", async () => {
   const email = emailInput.value.trim();
   const password = passwordInput.value.trim();
-  if(!email || !password){ 
-    errorMsg.textContent="الرجاء إدخال البريد وكلمة المرور."; 
-    return; 
-  }
+  if(!email || !password){ errorMsg.textContent="الرجاء إدخال البريد وكلمة المرور."; return; }
 
   loginBtn.disabled = true;
   loginBtn.textContent = "جاري التحقق...";
@@ -94,13 +86,25 @@ loginBtn.addEventListener("click", async () => {
   }
 });
 
-// 🔹 توجيه المستخدم حسب النوع
+// توجيه المستخدم حسب النوع
 function redirectUser(userData){
-  if(userData.type==="superAdmin") window.location.href="manage-institutes.html";
-  else if(userData.type==="instituteAdmin") window.location.href="dashboard.html";
-  else if(userData.type==="teacher") window.location.href="teacher-dashboard.html";
-  else if(userData.type==="student") window.location.href="student-dashboard.html";
-  else alert("نوع المستخدم غير معروف!");
+  switch(userData.type){
+    case "superAdmin":
+      window.location.href="manage-institutes.html";
+      break;
+    case "instituteAdmin":
+      window.location.href="dashboard.html";
+      break;
+    case "teacher":
+      window.location.href="teacher-dashboard.html";
+      break;
+    case "student":
+      window.location.href="student-dashboard.html";
+      break;
+    default:
+      alert("نوع المستخدم غير معروف!");
+      break;
+  }
 }
 </script>
 </body>
