--- a/dashboard.html
+++ b/dashboard.html
@@ -126,7 +126,7 @@ Object.keys(pageLinks).forEach(id => {
 document.getElementById("logoutBtn").addEventListener("click", async () => {
   await signOut(auth);
   alert("تم تسجيل الخروج بنجاح");
-  window.location.href = "institute-login.html";
+  window.location.href = "login.html";
 });
 
 // 🎨 تطبيق ألوان المعهد من localStorage
