--- a/manage-institutes.html
+++ b/manage-institutes.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>إدارة المعاهد - نظام OMA</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>إدارة المعاهد - OMA</title>
 <style>
 :root {
   --primary:#004aad;
   --bg:#f5f9ff;
   --card:#fff;
-  --accent:#ffcc33;
 }
 
 body {
@@ -19,21 +18,13 @@ body {
   padding:20px;
 }
 
-header {
-  text-align:center;
-  background: var(--primary);
-  color:white;
-  padding:15px 0;
-  font-size:20px;
-  font-weight:bold;
-  border-radius:8px;
-}
+h2 { text-align:center; color:var(--primary); margin-bottom:30px; }
 
 .form-container {
   background: var(--card);
   padding:30px;
   max-width:600px;
-  margin:20px auto;
+  margin:0 auto 40px auto;
   border-radius:12px;
   box-shadow:0 4px 15px rgba(0,0,0,0.1);
 }
@@ -73,22 +64,38 @@ button:hover { background:#003a8c; }
   border-bottom:1px solid #ccc;
   display:flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 }
 
 .institute-item:last-child { border-bottom:none; }
 
 .institute-item button {
-  width:auto;
   margin-left:5px;
   padding:5px 10px;
   font-size:14px;
+}
+
+.color-box {
+  display:inline-block;
+  width:30px;
+  height:30px;
+  border-radius:5px;
+  border:1px solid #ccc;
+  vertical-align:middle;
+  margin-left:10px;
+}
+
+#logoutBtn {
+  background-color: #d32f2f;
+  display:block;
+  margin:30px auto;
+  width:200px;
 }
 </style>
 </head>
 <body>
 
-<header>👨‍💼 إدارة المعاهد - نظام OMA</header>
+<h2>إنشاء وإدارة المعاهد</h2>
 
 <div class="form-container">
   <label class="label">اسم المعهد</label>
@@ -122,6 +129,7 @@ button:hover { background:#003a8c; }
   </select>
 
   <button id="createBtn">إنشاء المعهد</button>
+  <button id="updateBtn" style="display:none;">تحديث المعهد</button>
   <p id="statusMsg" style="color:red;"></p>
 </div>
 
@@ -130,15 +138,15 @@ button:hover { background:#003a8c; }
   <div id="listContainer"></div>
 </div>
 
-<button id="logoutBtn" style="margin:30px auto; display:block;">🔓 تسجيل الخروج</button>
+<button id="logoutBtn">🔓 تسجيل الخروج</button>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
-import { getAuth, createUserWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, getDocs, serverTimestamp, doc, updateDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword, updatePassword, updateEmail, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-storage.js";
 
-// 🔹 Firebase Config
+// Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -164,45 +172,69 @@ const colorCard = document.getElementById("colorCard");
 const colorAccent = document.getElementById("colorAccent");
 const subscriptionType = document.getElementById("subscriptionType");
 const createBtn = document.getElementById("createBtn");
+const updateBtn = document.getElementById("updateBtn");
 const statusMsg = document.getElementById("statusMsg");
 const listContainer = document.getElementById("listContainer");
 const logoutBtn = document.getElementById("logoutBtn");
 
-// 🔹 التأكد من تسجيل الدخول
-auth.onAuthStateChanged(user=>{
-  if(!user) window.location.href="login.html";
-});
+let editingDocId = null;
+let editingAdminId = null;
 
-// تحميل قائمة المعاهد
+// تحميل المعاهد
 async function loadInstitutes() {
   listContainer.innerHTML = "";
-  const querySnapshot = await getDocs(collection(db,"institutes"));
-  querySnapshot.forEach(docSnap=>{
+  const querySnapshot = await getDocs(collection(db, "institutes"));
+  querySnapshot.forEach(docSnap => {
     const data = docSnap.data();
     const div = document.createElement("div");
     div.classList.add("institute-item");
-    div.innerHTML = `<span>${data.name} - ${data.adminEmail} - ${data.createdAt?.toDate?.().toLocaleDateString() || "غير محدد"}</span>
-                     <span>
-                       <button onclick="editInstitute('${docSnap.id}')">✏️ تعديل</button>
-                       <button onclick="deleteInstitute('${docSnap.id}')">🗑 حذف</button>
-                     </span>`;
+    div.innerHTML = `
+      <span>${data.name} - البريد: ${data.adminEmail} - الاشتراك: ${data.subscriptionType}</span>
+      <span>
+        <button class="editBtn">تعديل</button>
+        <button class="deleteBtn">حذف</button>
+      </span>
+    `;
+    div.querySelector(".editBtn").addEventListener("click", ()=>{
+      editingDocId = docSnap.id;
+      editingAdminId = data.adminId;
+      instituteName.value = data.name;
+      adminEmail.value = data.adminEmail;
+      adminPassword.value = "";
+      colorPrimary.value = data.colors.primary;
+      colorBg.value = data.colors.bg;
+      colorCard.value = data.colors.card;
+      colorAccent.value = data.colors.accent;
+      subscriptionType.value = data.subscriptionType;
+      createBtn.style.display = "none";
+      updateBtn.style.display = "block";
+    });
+    div.querySelector(".deleteBtn").addEventListener("click", async()=>{
+      if(confirm("هل أنت متأكد من حذف هذا المعهد؟")){
+        await deleteDoc(doc(db,"institutes",docSnap.id));
+        loadInstitutes();
+      }
+    });
     listContainer.appendChild(div);
   });
 }
 
-// إنشاء معهد جديد
-createBtn.addEventListener("click", async()=>{
+// إنشاء أو تحديث المعهد
+async function saveInstitute(docId=null){
   const name = instituteName.value.trim();
   const email = adminEmail.value.trim();
   const password = adminPassword.value.trim();
-  if(!name || !email || !password){
-    statusMsg.textContent="الرجاء تعبئة جميع الحقول.";
+  if(!name || !email || (!docId && !password)){
+    statusMsg.style.color="red";
+    statusMsg.textContent="الرجاء تعبئة جميع الحقول المطلوبة.";
     return;
   }
-  statusMsg.textContent="جاري إنشاء المعهد...";
+
+  statusMsg.style.color="black";
+  statusMsg.textContent= docId ? "جاري تحديث المعهد..." : "جاري إنشاء المعهد...";
 
   try{
-    let logoUrl="";
+    let logoUrl = "";
     if(instituteLogo.files.length>0){
       const file = instituteLogo.files[0];
       const logoRef = ref(storage, `instituteLogos/${Date.now()}_${file.name}`);
@@ -210,71 +242,100 @@ createBtn.addEventListener("click", async()=>{
       logoUrl = await getDownloadURL(logoRef);
     }
 
-    // إنشاء مدير المعهد
-    const userCred = await createUserWithEmailAndPassword(auth,email,password);
-    const adminId = userCred.user.uid;
+    if(docId){ // تحديث المعهد
+      const instituteRef = doc(db,"institutes",docId);
+      await updateDoc(instituteRef,{
+        name,
+        colors:{
+          primary: colorPrimary.value,
+          bg: colorBg.value,
+          card: colorCard.value,
+          accent: colorAccent.value
+        },
+        subscriptionType: subscriptionType.value,
+        logoUrl: logoUrl || undefined
+      });
 
-    // إضافة المعهد
-    const docRef = await addDoc(collection(db,"institutes"),{
-      name,
-      adminId,
-      adminEmail: email,
-      logoUrl,
-      colors:{
-        primary: colorPrimary.value,
-        bg: colorBg.value,
-        card: colorCard.value,
-        accent: colorAccent.value
-      },
-      subscriptionType: subscriptionType.value,
-      createdAt: serverTimestamp()
-    });
+      // تحديث البريد وكلمة المرور في Auth إذا تم إدخال كلمة مرور جديدة أو تغيير البريد
+      if(editingAdminId){
+        const userRef = doc(db,"users",editingAdminId);
+        const userSnap = await getDoc(userRef);
+        if(userSnap.exists()){
+          const userData = userSnap.data();
+          const user = await auth.getUser ? await auth.getUser(editingAdminId) : null;
+          // ملاحظة: التحديث المباشر في Auth يحتاج Admin SDK على الخادم
+          // لذلك سنكتفي بتحديث Firestore هنا لتبقى البيانات متوافقة
+          await updateDoc(userRef,{
+            email: email
+          });
+        }
+      }
 
-    // ربط المستخدم بالمعهد
-    await addDoc(collection(db,"users"),{
-      uid: adminId,
-      type:"instituteAdmin",
-      instituteId: docRef.id,
-      email:email,
-      createdAt:serverTimestamp()
-    });
+      statusMsg.style.color="green";
+      statusMsg.textContent="تم تحديث المعهد بنجاح!";
+    } else { // إنشاء جديد
+      const userCred = await createUserWithEmailAndPassword(auth,email,password);
+      const adminId = userCred.user.uid;
+      const docRef = await addDoc(collection(db,"institutes"),{
+        name,
+        adminId,
+        adminEmail: email,
+        logoUrl,
+        colors:{
+          primary: colorPrimary.value,
+          bg: colorBg.value,
+          card: colorCard.value,
+          accent: colorAccent.value
+        },
+        subscriptionType: subscriptionType.value,
+        createdAt: serverTimestamp()
+      });
+      await addDoc(collection(db,"users"),{
+        uid: adminId,
+        type:"instituteAdmin",
+        instituteId:docRef.id,
+        email,
+        createdAt:serverTimestamp()
+      });
+      statusMsg.style.color="green";
+      statusMsg.textContent="تم إنشاء المعهد بنجاح!";
+    }
 
-    statusMsg.style.color="green";
-    statusMsg.textContent="تم إنشاء المعهد بنجاح!";
+    // إعادة ضبط النموذج
     instituteName.value="";
     adminEmail.value="";
     adminPassword.value="";
     instituteLogo.value="";
+    createBtn.style.display="block";
+    updateBtn.style.display="none";
+    editingDocId=null;
+    editingAdminId=null;
     loadInstitutes();
   }catch(err){
     console.error(err);
     statusMsg.style.color="red";
-    statusMsg.textContent="حدث خطأ أثناء إنشاء المعهد.";
+    statusMsg.textContent="حدث خطأ: "+err.message;
   }
+}
+
+createBtn.addEventListener("click",()=>saveInstitute());
+updateBtn.addEventListener("click",()=>saveInstitute(editingDocId));
+
+// عرض الألوان مباشرة
+const colorInputs = document.querySelectorAll('input[type="color"]');
+colorInputs.forEach(input=>{
+  input.style.backgroundColor=input.value;
+  input.addEventListener('input',()=>input.style.backgroundColor=input.value);
 });
 
-// حذف معهد
-window.deleteInstitute = async (id)=>{
-  if(!confirm("هل تريد حقاً حذف هذا المعهد؟")) return;
-  await deleteDoc(doc(db,"institutes",id));
-  loadInstitutes();
-};
-
-// تعديل معهد (سريع، يمكن تطويره لاحقاً)
-window.editInstitute = async (id)=>{
-  const docRef = doc(db,"institutes",id);
-  const docSnap = await getDocs(collection(db,"institutes"));
-  alert("ميزة التعديل متاحة لاحقاً");
-};
+// تحميل القائمة عند بدء الصفحة
+loadInstitutes();
 
 // تسجيل الخروج
 logoutBtn.addEventListener("click", async()=>{
   await signOut(auth);
   window.location.href="login.html";
 });
-
-// تحميل القائمة عند فتح الصفحة
-loadInstitutes();
 </script>
 </body>
 </html>
