--- a/login.html
+++ b/login.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>تسجيل الدخول - نظام OMA</title>
 <style>
-:root { --primary:#004aad; --bg:#f5f9ff; --card:#fff; }
-body { margin:0; font-family:'Cairo',sans-serif; background: var(--bg); height:100vh; display:flex; justify-content:center; align-items:center; }
-.login-box { background:var(--card); padding:40px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); text-align:center; width:320px; }
-h2 { margin-bottom:25px; color:var(--primary); }
-input { width:100%; padding:12px; margin-bottom:15px; border-radius:8px; border:1px solid #ccc; font-size:15px; }
-button { background:var(--primary); color:white; border:none; padding:12px; width:100%; border-radius:8px; font-size:16px; cursor:pointer; transition:0.3s; }
-button:hover { background:#003a8c; }
-.error { color:red; font-size:14px; margin-bottom:10px; }
-footer { position:fixed; bottom:10px; width:100%; text-align:center; color:#888; font-size:13px; }
+:root{--primary:#004aad;--bg:#f5f9ff;--card:#fff}
+body{font-family:'Cairo',sans-serif;background:var(--bg);height:100vh;display:flex;align-items:center;justify-content:center;margin:0}
+.login-box{background:var(--card);padding:28px;border-radius:12px;box-shadow:0 8px 30px rgba(0,0,0,0.08);width:340px}
+h2{color:var(--primary);margin:0 0 14px;text-align:center}
+input,button{width:100%;padding:10px;border-radius:8px;border:1px solid #d6dde9;margin-bottom:10px;box-sizing:border-box}
+button{background:var(--primary);color:#fff;border:none;cursor:pointer;font-weight:700}
+.error{color:#c62828;font-size:14px;text-align:center;min-height:20px}
+.note{font-size:13px;color:#546e7a;text-align:center;margin-top:8px}
 </style>
 </head>
 <body>
-<div class="login-box">
-  <h2>تسجيل الدخول 🔐</h2>
-  <p class="error" id="errorMsg"></p>
-  <input type="email" id="email" placeholder="البريد الإلكتروني" required />
-  <input type="password" id="password" placeholder="كلمة المرور" required />
-  <button id="loginBtn">دخول</button>
-</div>
-
-<footer>© 2025 نظام OMA - جميع الحقوق محفوظة</footer>
+  <div class="login-box">
+    <h2>تسجيل الدخول</h2>
+    <div id="errorMsg" class="error"></div>
+    <input id="email" type="email" placeholder="البريد الإلكتروني" />
+    <input id="password" type="password" placeholder="كلمة المرور" />
+    <button id="loginBtn">دخول</button>
+    <div class="note">إذا لم يكن لديك حساب، اطّلب من مدير النظام إنشاء حسابك.</div>
+  </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, doc, getDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// 🔹 إعداد Firebase
+// ✳️ عدّل config إذا كان مختلف عندك
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -47,65 +45,100 @@ const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-const emailInput = document.getElementById("email");
-const passwordInput = document.getElementById("password");
-const loginBtn = document.getElementById("loginBtn");
-const errorMsg = document.getElementById("errorMsg");
+const emailInput = document.getElementById('email');
+const passInput = document.getElementById('password');
+const loginBtn = document.getElementById('loginBtn');
+const errorMsg = document.getElementById('errorMsg');
 
-// تحقق تسجيل دخول مسبق
-onAuthStateChanged(auth, async (user) => {
-  if (user) {
-    const userDoc = await getDoc(doc(db,"users",user.uid));
-    if(userDoc.exists()) redirectUser(userDoc.data());
-  }
-});
+function showError(text){
+  errorMsg.textContent = text || '';
+}
 
-// تسجيل الدخول
-loginBtn.addEventListener("click", async () => {
-  const email = emailInput.value.trim();
-  const password = passwordInput.value.trim();
-  if(!email || !password){ errorMsg.textContent="الرجاء إدخال البريد وكلمة المرور."; return; }
-
-  loginBtn.disabled = true;
-  loginBtn.textContent = "جاري التحقق...";
-  errorMsg.textContent="";
-
-  try{
-    const userCred = await signInWithEmailAndPassword(auth,email,password);
-    const uid = userCred.user.uid;
-    const userDoc = await getDoc(doc(db,"users",uid));
-    if(!userDoc.exists()) throw new Error("المستخدم غير موجود في النظام.");
-    redirectUser(userDoc.data());
-  }catch(err){
-    loginBtn.disabled = false;
-    loginBtn.textContent = "دخول";
-    if(err.code==="auth/user-not-found") errorMsg.textContent="المستخدم غير موجود.";
-    else if(err.code==="auth/wrong-password") errorMsg.textContent="كلمة المرور غير صحيحة.";
-    else errorMsg.textContent="حدث خطأ أثناء تسجيل الدخول.";
-    console.error(err);
-  }
-});
-
-// توجيه المستخدم حسب النوع
-function redirectUser(userData){
-  switch(userData.type){
-    case "superAdmin":
-      window.location.href="manage-institutes.html";
-      break;
-    case "instituteAdmin":
-      window.location.href="dashboard.html";
-      break;
-    case "teacher":
-      window.location.href="teacher-dashboard.html";
-      break;
-    case "student":
-      window.location.href="student-dashboard.html";
-      break;
-    default:
-      alert("نوع المستخدم غير معروف!");
-      break;
+// تحويل المستخدم حسب النوع
+function redirectUserByType(type){
+  if(type === 'superAdmin') location.href = 'manage-institutes.html';
+  else if(type === 'instituteAdmin') location.href = 'dashboard.html';
+  else if(type === 'teacher') location.href = 'teacher-dashboard.html';
+  else if(type === 'student') location.href = 'student-dashboard.html';
+  else {
+    alert('نوع المستخدم غير معروف. راجع سجل المستخدم في Firestore (حقل type).');
+    console.warn('Unknown user type:', type);
   }
 }
+
+// robust lookup: after auth, check users doc by uid; if not found try query by email
+async function findUserDoc(uid, email){
+  try{
+    if(uid){
+      const snap = await getDoc(doc(db,'users',uid));
+      if(snap.exists()) return { id:snap.id, data: snap.data() };
+    }
+  }catch(e){ console.warn('find by uid failed', e); }
+
+  // try by email field (some flows created docs without uid as id)
+  try{
+    const q = query(collection(db,'users'), where('email','==', email));
+    const qSnap = await getDocs(q);
+    if(!qSnap.empty){
+      const d = qSnap.docs[0];
+      return { id: d.id, data: d.data() };
+    }
+  }catch(e){ console.warn('find by email failed', e); }
+
+  return null;
+}
+
+loginBtn.addEventListener('click', async ()=>{
+  showError('');
+  loginBtn.disabled = true;
+  loginBtn.textContent = 'جاري التحقق...';
+
+  const email = emailInput.value.trim();
+  const password = passInput.value;
+
+  if(!email || !password){
+    showError('الرجاء إدخال البريد وكلمة المرور.');
+    loginBtn.disabled = false;
+    loginBtn.textContent = 'دخول';
+    return;
+  }
+
+  try{
+    const userCred = await signInWithEmailAndPassword(auth, email, password);
+    const uid = userCred.user.uid;
+    // حاول جلب وثيقة المستخدم من عدة طرق
+    const userDoc = await findUserDoc(uid, email);
+    if(!userDoc){
+      // المستخدم مسجل في Auth لكن لا يوجد سجل في users collection
+      showError('تم الدخول لكن بيانات المستخدم غير موجودة في قاعدة البيانات (users). تواصل مع الدعم.');
+      console.error('Auth user exists but no users doc for uid/email:', uid, email);
+      loginBtn.disabled = false;
+      loginBtn.textContent = 'دخول';
+      return;
+    }
+    const userData = userDoc.data;
+    if(!userData.type){
+      showError('نوع المستخدم غير محدد في وثيقة المستخدم (حقل type). راجع Firestore.');
+      console.error('User doc missing type:', userDoc);
+      loginBtn.disabled = false;
+      loginBtn.textContent = 'دخول';
+      return;
+    }
+
+    // نجاح: التوجيه حسب النوع
+    redirectUserByType(userData.type);
+
+  }catch(err){
+    console.error('Login error:', err);
+    // عرض رسائل خطأ مفصّلة للمستخدم
+    if(err.code === 'auth/user-not-found') showError('المستخدم غير موجود. تأكد من البريد.');
+    else if(err.code === 'auth/wrong-password') showError('كلمة المرور غير صحيحة.');
+    else if(err.code === 'auth/too-many-requests') showError('محاولات متعددة وفشل — حاول لاحقًا.');
+    else showError('حدث خطأ أثناء تسجيل الدخول: ' + (err.message || err.code));
+    loginBtn.disabled = false;
+    loginBtn.textContent = 'دخول';
+  }
+});
 </script>
 </body>
 </html>
